tried to fix spacing

--- a/sub2/numbersGame/css/style.css
+++ b/sub2/numbersGame/css/style.css
@@ -1,16 +1,15 @@
-.vertical-center {
-  justify-content: center;
-  align-items: center;
-  max-height: 70% !important;
 
-}
 .handwritten{
   font-family: 'Indie Flower', cursive;
   color: black !important;
 }
+.main{
+  display:block;
+}
 .inner{
   margin-top: 5% !important;
   margin-bottom: 10% !important;
+  max-height: 75%;
   min-height: 70%;
   display: flex;
 
@@ -21,6 +20,7 @@
 .bottom{
   max-height: 20% !important;
   margin-top: -10px;
+  border: 2px solid black;
 }
 }
 a{
@@ -47,10 +47,10 @@ a{
   color:#58A8E0;
 }
 #twitter{
-padding: 11px 14px 11px 14px;
+padding: 11px 13px 11px 13px;
 }
 #github{
-  padding: 12px 16px 12px 16px;
+  padding: 12px 15px 12px 15px;
 }
 #facebook{
   padding: 11px 18px 11px 18px;
@@ -68,7 +68,7 @@ padding: 11px 14px 11px 14px;
   color:#333333;
 }
 #linkedin{
-  padding: 13px 17px 13px 17px;
+  padding: 12px 15px 12px 15px;
 }
 #linkedin:hover{
   color:#0C7CB6;
